# EC_OS_GCC

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RTS591x.svd
cmake/: RTKToolChain.cmake  RTS5911.cmake  SignTool.cmake
include/armv8m/: init.h
include/chip/rts5911/: RTS5911.h
include/device/: system.h
include/device/rts5911/: RTS5911.h  nvic.h  system.h
include/device/rts5911/driver/: acpi.h  espi_virtual_wire.h  gpio.h  i2c.h  slow_timer.h  uart.h
include/kernel/: error_code.h  scheduler.h  task.h  taskmeta.h  thread.h
include/system/: acpi_cmd.h
ldscripts/: rts5911.ld
script/: attach_debug.bat
src/armv8m/: init.c
src/chip/rts5911/: crt0.s  reset.s  vector_table.c
src/debug/: instrument.c
src/device/: system.c
src/device/rts5911/: crt0.s  reset.s  svc.s  system.c  vector_table.c
src/device/rts5911/driver/: espi_virtual_wire.c  i2c.c  slow_timer.c  uart.c
src/kernel/: main.c  malloc.c  scheduler.c  task.c  thread.c
src/system/: acpi_cmd.c
